--- a/less/excelsior/_foundation-override.less
+++ b/less/excelsior/_foundation-override.less
@@ -181,7 +181,7 @@ ul.f-dropdown li {
     padding: 0.1875em 0.5625em; // 3px 9px
 
     &:hover {
-      border-radius: 1000px;
+      .border-radius(1000px);
       background: #999;
       color: #fff;
     }
@@ -289,8 +289,7 @@ section .title a,
 
 .auto section.section,
 .accordion section.section {
-  border-radius: 3px;
-  background-clip: padding-box;
+  .border-radius(3px);
   border-left: 1px solid #cccccc;
   border-right: 1px solid #cccccc;
   border-bottom: 1px solid #cccccc;
