--- a/less/excelsior/_mixins.less
+++ b/less/excelsior/_mixins.less
@@ -25,6 +25,15 @@
   -webkit-transition: @transition;
           transition: @transition;
 }
+/* Ugh, is there a better way to handle these next two? */
+.transition-two(@transition1, @transition2) {
+  -webkit-transition: @transition1, @transition2;
+          transition: @transition1, @transition2;
+}
+.transition-three(@transition1, @transition2, @transition3) {
+  -webkit-transition: @transition1, @transition2, @transition3;
+          transition: @transition1, @transition2, @transition3;
+}
 .transition-delay(@transition-delay) {
   -webkit-transition-delay: @transition-delay;
           transition-delay: @transition-delay;
@@ -173,7 +182,7 @@
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   border: 1px solid #cccccc;
   border-bottom-color: #b3b3b3;
-  border-radius: 4px;
+  .border-radius(4px);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
 
   &:hover {
