--- a/less/excelsior/components/_buttons.less
+++ b/less/excelsior/components/_buttons.less
@@ -62,7 +62,7 @@ button.button {
 .button.large {
   padding: 11px 19px;
   font-size: 17.5px;
-  border-radius: 6px;
+  .border-radius(6px);
 }
 
 .button.large [class^="icon-"],
@@ -73,7 +73,7 @@ button.button {
 .button.small {
   padding: 2px 10px;
   font-size: 11.9px;
-  border-radius: 3px;
+  .border-radius(3px);
 }
 
 .button.small [class^="icon-"],
@@ -89,7 +89,7 @@ button.button {
 .button.tiny {
   padding: 0 6px;
   font-size: 10.5px;
-  border-radius: 3px;
+  .border-radius(3px);
 }
 
 .button-block {
