--- a/less/excelsior/components/_forms.less
+++ b/less/excelsior/components/_forms.less
@@ -71,7 +71,7 @@ input[type="search"],
 input[type="tel"],
 input[type="color"] {
   color: #555555;
-  border-radius: 4px;
+  .border-radius(4px);
   vertical-align: middle;
 }
 
@@ -119,17 +119,41 @@ input[type="color"]:focus,
 .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
-  outline: thin dotted \9;
-  /* IE6-9 */
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+
+.ie9, .lt-ie9 {
+    textarea:focus,
+    input[type="text"]:focus,
+    input[type="password"]:focus,
+    input[type="datetime"]:focus,
+    input[type="datetime-local"]:focus,
+    input[type="date"]:focus,
+    input[type="month"]:focus,
+    input[type="time"]:focus,
+    input[type="week"]:focus,
+    input[type="number"]:focus,
+    input[type="email"]:focus,
+    input[type="url"]:focus,
+    input[type="search"]:focus,
+    input[type="tel"]:focus,
+    input[type="color"]:focus,
+    .uneditable-input:focus {
+        outline: thin dotted;
+    }
 }
 
 input[type="radio"],
 input[type="checkbox"] {
   margin: 4px 0 0;
-  margin-top: 1px \9;
-  /* IE8-9 */
   line-height: normal;
+}
+
+.ie9, .lt-ie9 {
+    input[type="radio"],
+    input[type="checkbox"] {
+        margin-top: 1px;
+    }
 }
 
 input[type="file"],
@@ -368,7 +392,7 @@ select:focus:invalid:focus {
   position: relative;
   margin-bottom: 0;
   vertical-align: top;
-  border-radius: 0 4px 4px 0;
+  .border-radius(0 4px 4px 0);
 }
 
 .input-append input:focus,
@@ -403,7 +427,7 @@ select:focus:invalid:focus {
 .input-append .btn-group > .dropdown-toggle,
 .input-prepend .btn-group > .dropdown-toggle {
   vertical-align: top;
-  border-radius: 0;
+  .border-radius(0);
 }
 
 .input-append .active,
@@ -419,19 +443,19 @@ select:focus:invalid:focus {
 
 .input-prepend .add-on:first-child,
 .input-prepend .btn:first-child {
-  border-radius: 4px 0 0 4px;
+  .border-radius(4px 0 0 4px);
 }
 
 .input-append input,
 .input-append select,
 .input-append .uneditable-input {
-  border-radius: 4px 0 0 4px;
+  .border-radius(4px 0 0 4px);
 }
 
 .input-append input + .btn-group .btn:last-child,
 .input-append select + .btn-group .btn:last-child,
 .input-append .uneditable-input + .btn-group .btn:last-child {
-  border-radius: 0 4px 4px 0;
+  .border-radius(0 4px 4px 0);
 }
 
 .input-append .add-on,
@@ -443,44 +467,44 @@ select:focus:invalid:focus {
 .input-append .add-on:last-child,
 .input-append .btn:last-child,
 .input-append .btn-group:last-child > .dropdown-toggle {
-  border-radius: 0 4px 4px 0;
+    .border-radius(0 4px 4px 0);
 }
 
 .input-prepend.input-append input,
 .input-prepend.input-append select,
 .input-prepend.input-append .uneditable-input {
-  border-radius: 0;
+    border-radius: 0;
 }
 
 .input-prepend.input-append input + .btn-group .btn,
 .input-prepend.input-append select + .btn-group .btn,
 .input-prepend.input-append .uneditable-input + .btn-group .btn {
-  border-radius: 0 4px 4px 0;
+    .border-radius(0 4px 4px 0);
 }
 
 .input-prepend.input-append .add-on:first-child,
 .input-prepend.input-append .btn:first-child {
-  margin-right: -1px;
-  border-radius: 4px 0 0 4px;
+    margin-right: -1px;
+    .border-radius(4px 0 0 4px);
 }
 
 .input-prepend.input-append .add-on:last-child,
 .input-prepend.input-append .btn:last-child {
-  margin-left: -1px;
-  border-radius: 0 4px 4px 0;
+    margin-left: -1px;
+    .border-radius(0 4px 4px 0);
 }
 
 .input-prepend.input-append .btn-group:first-child {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 .required:after {
-  content: "*";
-  display: block;
-  position: absolute;
-  top: 0;
-  right: -10px;
-  color: @alert-color;
+    content: "*";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: -10px;
+    color: @alert-color;
 }
 
 .form-field-info {
