--- a/less/excelsior/components/_tables.less
+++ b/less/excelsior/components/_tables.less
@@ -9,52 +9,52 @@
  */
 
 table {
-  background-color: #fff;
-  border-spacing: 0;
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
-  border: 1px solid #dddddd;
-  border-collapse: separate;
-  border-left: 0;
-  border-radius: 4px;
+    background-color: #fff;
+    border-spacing: 0;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    border: 1px solid #dddddd;
+    border-collapse: separate;
+    border-left: 0;
+    .border-radius(4px);
 }
 
 thead:first-child tr:first-child th,
 thead:first-child tr:first-child td {
-  border-top: 0;
+    border-top: 0;
 }
 
 th,
 td {
-  padding: 4px 5px;
-  line-height: 20px;
-  text-align: left;
-  vertical-align: top;
-  border-top: 1px solid #dddddd;
-  border-left: 1px solid #dddddd;
+    padding: 4px 5px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: top;
+    border-top: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
 }
 
 th {
-  vertical-align: bottom;
+    vertical-align: bottom;
 }
 
 thead:first-child tr:first-child th,
 tbody:first-child tr:first-child th,
 tbody:first-child tr:first-child td {
-  border-top: 0;
+    border-top: 0;
 }
 
 thead:first-child tr:first-child > th:first-child,
 tbody:first-child tr:first-child > td:first-child,
 tbody:first-child tr:first-child > th:first-child {
-  border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
 }
 
 thead:first-child tr:first-child > th:last-child,
 tbody:first-child tr:first-child > td:last-child,
 tbody:first-child tr:first-child > th:last-child {
-  border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 thead:last-child tr:last-child > th:first-child,
@@ -62,7 +62,7 @@ tbody:last-child tr:last-child > td:first-child,
 tbody:last-child tr:last-child > th:first-child,
 tfoot:last-child tr:last-child > td:first-child,
 tfoot:last-child tr:last-child > th:first-child {
-  border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
 thead:last-child tr:last-child > th:last-child,
@@ -70,54 +70,54 @@ tbody:last-child tr:last-child > td:last-child,
 tbody:last-child tr:last-child > th:last-child,
 tfoot:last-child tr:last-child > td:last-child,
 tfoot:last-child tr:last-child > th:last-child {
-  border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 tfoot + tbody:last-child tr:last-child td:first-child {
-  border-bottom-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 tfoot + tbody:last-child tr:last-child td:last-child {
-  border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 tbody tr.success > td {
-  background-color: #dff0d8;
+    background-color: #dff0d8;
 }
 
 tbody tr.error > td {
-  background-color: #f2dede;
+    background-color: #f2dede;
 }
 
 tbody tr.warning > td {
-  background-color: #fcf8e3;
+    background-color: #fcf8e3;
 }
 
 tbody tr.info > td {
-  background-color: #d9edf7;
+    background-color: #d9edf7;
 }
 
 /* Highlight table rows on hover */
 
 .table-hover tbody tr:hover > td,
 .table-hover tbody tr:hover > th {
-  background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 
 .table-hover tbody tr.success:hover > td {
-  background-color: #d0e9c6;
+    background-color: #d0e9c6;
 }
 
 .table-hover tbody tr.error:hover > td {
-  background-color: #ebcccc;
+    background-color: #ebcccc;
 }
 
 .table-hover tbody tr.warning:hover > td {
-  background-color: #faf2cc;
+    background-color: #faf2cc;
 }
 
 .table-hover tbody tr.info:hover > td {
-  background-color: #c4e3f3;
+    background-color: #c4e3f3;
 }
 
 // Responsive tables
