--- a/css/off-canvas.css
+++ b/css/off-canvas.css
@@ -76,12 +76,14 @@
     height: 53px;
   }
   .off-canvas .global-nav .menu-controls .menu-back {
-    background-image: -webkit-linear-gradient(#999999, #505050);
-    background-image: linear-gradient(#999999, #505050);
+    float: right;
+    background-color: #7c7c7c;
+    background-image: -webkit-linear-gradient(top, #999999, #505050);
+    background-image: linear-gradient(to bottom, #999999, #505050);
+    background-repeat: repeat-x;
     border-radius: 5px;
     background-clip: padding-box;
     color: #fff;
-    float: right;
     margin: 10px;
     padding: 7px 7px 7px 1px;
     visibility: hidden;
@@ -212,14 +214,16 @@
     margin-left: 0;
   }
   .off-canvas .global-nav ul ul {
+    position: absolute;
+    top: 50px !important;
+    left: 0;
     background: #454545 !important;
     /* M */
   
     border-radius: 4px !important;
+    /* Do not use mixin here */
+  
     background-clip: padding-box !important;
-    top: 50px !important;
-    left: 0;
-    position: absolute;
     overflow: hidden;
     visibility: hidden;
     -webkit-transition: left 0s ease;
