--- a/less/excelsior/_mixins.less
+++ b/less/excelsior/_mixins.less
@@ -88,14 +88,13 @@
 // Background clipping
 // Heads up: FF 3.6 and under need "padding" instead of "padding-box"
 .background-clip(@clip) {
-  background-clip: @clip;
+    background-clip: @clip;
 }
 
 // Background sizing
 .background-size(@size) {
-  background-size: @size;
+    background-size: @size;
 }
-
 
 // Box sizing
 .box-sizing(@boxmodel) {
@@ -114,8 +113,8 @@
 }
 
 .border-radius(@val) {
-  border-radius: @val;
-  background-clip: padding-box;
+    border-radius: @val;
+    .background-clip(padding-box);
 }
 
 // Gradients
