--- a/less/off-canvas.less
+++ b/less/off-canvas.less
@@ -96,11 +96,10 @@
     }
 
     .global-nav .menu-controls .menu-back {
-      background-image: -webkit-linear-gradient(#999, #505050);
-      background-image:         linear-gradient(#999, #505050);
+      float: right;
+      #gradient > .vertical(#999, #505050);
       .border-radius(5px);
       color: #fff;
-      float: right;
       margin: 10px;
       padding: 7px 7px 7px 1px;
       visibility: hidden;
@@ -128,8 +127,7 @@
     .gov-bar,
     .site-bar,
     .page {
-      -webkit-transition: top 0.2s ease, left 0.2s ease, height 0.2s ease;
-              transition: top 0.2s ease, left 0.2s ease, height 0.2s ease;
+      .transition-three(top 0.2s ease, left 0.2s ease, height 0.2s ease);
     }
 
     &.active-gov-bar .gov-pull-down-container,
@@ -274,11 +272,12 @@
     }
 
     .global-nav ul ul {
-      background: #454545 !important; /* M */
-      .border-radius(4px) !important;
-      top: 50px !important;
-      left:0;
       position: absolute;
+      top: 50px !important;
+      left: 0;
+      background: #454545 !important; /* M */
+      border-radius: 4px !important; /* Do not use mixin here */
+      background-clip: padding-box !important;
       overflow: hidden;
       visibility: hidden;
       .transition(left 0s ease);
