--- a/css/excelsior.css
+++ b/css/excelsior.css
@@ -8866,63 +8866,10 @@ a:focus {
   background-color: #162252;
   border: 1px solid #444;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48em) {
   .margin-top-small {
     margin-top: 1em;
   }
-}
-.news {
-  margin: 0.3em 0.8em;
-  border-radius: 8px;
-  background-clip: padding-box;
-  background: #5082b3;
-}
-.news strong {
-  font-family: "Verdana", sans-serif;
-  font-weight: bold;
-}
-.news img {
-  vertical-align: text-top;
-}
-.news dl {
-  background: #eee;
-  text-align: left;
-  padding: 0.5em 0.3em;
-  margin: 0;
-}
-.news dt {
-  font-family: "Verdana", sans-serif;
-  font-weight: bold;
-  font-size: 0.688em;
-  margin: 0;
-  line-height: 1.4em;
-  padding-bottom: 0.5em;
-}
-.news a {
-  font-weight: normal;
-  color: #036;
-}
-.news a:hover {
-  color: #873939;
-  text-decoration: underline;
-}
-.whatsnew {
-  padding: 0.2em;
-  text-transform: uppercase;
-  font-family: "Cambria", sans-serif;
-  color: #fff;
-}
-.facebook a {
-  font-size: 0.7em;
-  color: #fff;
-  text-decoration: none;
-  font-family: "Times New Roman", serif;
-  padding: 0.3em 0;
-  display: block;
-}
-.facebook a:hover {
-  color: #ff0;
-  text-decoration: none;
 }
 .govurl {
   padding: 0.2em 0 0.5em 0;
@@ -8934,25 +8881,4 @@ a:focus {
 }
 .govurl a:hover {
   color: #ff0;
-}
-.dta-action .panel {
-  overflow: hidden;
-}
-.dta-action span,
-.dta-action a {
-  display: block;
-  color: #000;
-}
-.dta-action a,
-.dta-action a:hover {
-  text-decoration: none;
-}
-.dta-action span.dta-text {
-  line-height: 1.6em;
-}
-.dta-action h4 {
-  text-decoration: underline;
-}
-.dta-action a:hover h4 {
-  text-decoration: none;
 }
