--- a/less/excelsior/components/_components.less
+++ b/less/excelsior/components/_components.less
@@ -55,77 +55,13 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: @medium-screen) {
     .margin-top-small {
         margin-top: 1em;
     }
 }
 
 // DTA Prototype
-
-.news {
-  margin: 0.3em 0.8em;
-  .border-radius(8px);
-  background: #5082b3;
-
-  strong {
-    font-family: "Verdana", sans-serif;
-    font-weight: bold;
-  }
-
-  img {
-    vertical-align: text-top;
-  }
-
-  dl {
-    background: #eee;
-    text-align: left;
-    padding: 0.5em 0.3em;
-    margin: 0;
-  }
-
-  dt {
-    font-family: "Verdana", sans-serif;
-    font-weight: bold;
-    font-size: 0.688em;
-    margin: 0;
-    line-height: 1.4em;
-    padding-bottom: 0.5em;
-  }
-
-  a {
-    font-weight: normal;
-    color: #036;
-
-    &:hover{
-      color: #873939;
-      text-decoration: underline;
-    }
-  }
-}
-
-.whatsnew {
-  padding: 0.2em;
-  text-transform: uppercase;
-  font-family: "Cambria", sans-serif;
-  color: #fff;
-}
-
-.facebook {
-  a {
-    font-size: 0.7em;
-    color: #fff;
-    text-decoration: none;
-    font-family: "Times New Roman", serif;
-    padding: 0.3em 0;
-    display: block;
-
-    &:hover {
-      color: #ff0;
-      text-decoration: none;
-    }
-  }
-}
 
 .govurl{
   padding: 0.2em 0 0.5em 0;
@@ -139,29 +75,4 @@
   color: #ff0;
 }
 
-.dta-action .panel {
-  overflow:hidden;
-}
-
-.dta-action span,
-.dta-action a {
-  display: block;
-  color: #000;
-}
-
-.dta-action a, .dta-action a:hover{
-  text-decoration: none;
-}
-
-.dta-action span.dta-text{
-  line-height: 1.6em;
-}
-
-.dta-action h4 {
-  text-decoration: underline;
-}
-
-.dta-action a:hover h4 {
-  text-decoration: none;
-}
 
