Removed demo bar styles; JS formatting

--- a/less/excelsior/_foundation-override.less
+++ b/less/excelsior/_foundation-override.less
@@ -444,3 +444,26 @@ section .title a,
   }
 }
 
+// Joyride
+
+.joyride-tip-guide {
+    background: #DEDEDE !important;
+    color: #333 !important;
+    top: 60px !important;
+    text-shadow: none !important;
+    box-shadow: 0 0 4px #666;
+
+    .joyride-nub.top {
+        border-color: transparent transparent #DEDEDE !important;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        color: #333!important;
+        margin-bottom: 0.5em;
+    }
+}
+
+body .joyride-close-tip:hover,
+.joyride-close-tip:focus {
+    color: #000 !important;
+}
