--- a/css/off-canvas.css
+++ b/css/off-canvas.css
@@ -1,101 +1,230 @@
-@charset "utf-8";
-/* Ugh, is there a better way to handle these next two? */
-@media only screen { /* line 8, ../scss/off-canvas.scss */
-  html, body { background: #282828; height: 100%; }
+@charset "UTF-8";
+/* Ugh, is there a better way to handle these next two? */
+@media only screen {
+  /* line 8, ../scss/off-canvas.scss */
+  html,
+  body {
+    background: #282828;
+    height: 100%; }
+
   /* line 13, ../scss/off-canvas.scss */
-  body.off-canvas { padding-top: 48px; }
+  body.off-canvas {
+    padding-top: 48px; }
+
   /* line 19, ../scss/off-canvas.scss */
-  .off-canvas .gov-pull-down-container { position: absolute; top: 0; }
+  .off-canvas .gov-pull-down-container {
+    position: absolute;
+    top: 0; }
   /* line 24, ../scss/off-canvas.scss */
-  .off-canvas .gov-pull-down { height: 40px; width: 44px; }
+  .off-canvas .gov-pull-down {
+    height: 40px;
+    width: 44px; }
   /* line 29, ../scss/off-canvas.scss */
-  .off-canvas .gov-bar { position: absolute; width: 100%; }
+  .off-canvas .gov-bar {
+    position: absolute;
+    width: 100%; }
   /* line 34, ../scss/off-canvas.scss */
-  .off-canvas .gov-bar form { margin: 0; }
+  .off-canvas .gov-bar form {
+    margin: 0; }
   /* line 38, ../scss/off-canvas.scss */
-  .off-canvas .site-bar { position: absolute; width: 100%; }
+  .off-canvas .site-bar {
+    position: absolute;
+    width: 100%; }
   /* line 43, ../scss/off-canvas.scss */
-  .off-canvas .global-nav { position: fixed; top: 0; height: 100%; width: 100%; z-index: 0; }
+  .off-canvas .global-nav {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 0; }
   /* line 51, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .sub-menu-title { display: inline-block; color: #AAA; font-size: 1.45em; position: relative; left: 20%; line-height: 48px; padding-top: 0.15em; }
+  .off-canvas .global-nav .sub-menu-title {
+    display: inline-block;
+    color: #AAA;
+    font-size: 1.45em;
+    position: relative;
+    left: 20%;
+    line-height: 48px;
+    padding-top: 0.15em; }
   /* line 61, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .nav-container { height: inherit; overflow-y: scroll; }
+  .off-canvas .global-nav .nav-container {
+    height: inherit;
+    overflow-y: scroll; }
   /* line 66, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .nav-container > ul { min-height: 1000px; }
+  .off-canvas .global-nav .nav-container > ul {
+    min-height: 1000px; }
   /* line 70, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul { margin-left: 16%; }
+  .off-canvas .global-nav ul {
+    margin-left: 16%; }
   /* line 74, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul li { padding-left: 3%; }
+  .off-canvas .global-nav ul li {
+    padding-left: 3%; }
   /* line 78, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul { background: #333 !important; display: block; height: 100%; left: 100%; position: fixed; top: 53px; width: 100%; background: #333; -webkit-transition: left 0.2s ease; transition: left 0.2s ease; }
+  .off-canvas .global-nav ul ul {
+    background: #333 !important;
+    display: block;
+    height: 100%;
+    left: 100%;
+    position: fixed;
+    top: 53px;
+    width: 100%;
+    background: #333;
+    -webkit-transition: left 0.2s ease;
+    transition: left 0.2s ease; }
   /* line 90, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul li { padding-left: 2% !important; }
+  .off-canvas .global-nav ul ul li {
+    padding-left: 2% !important; }
   /* line 94, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .menu-controls { height: 53px; }
+  .off-canvas .global-nav .menu-controls {
+    height: 53px; }
   /* line 98, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .menu-controls .menu-back { float: right; background-color: #505050; background-image: -webkit-linear-gradient(left, #999999, #505050); background-image: linear-gradient(to right, #999999, #505050); background-repeat: repeat-x; border-radius: 5px; background-clip: padding-box; color: #fff; margin: 10px; padding: 7px 7px 7px 1px; visibility: hidden; }
+  .off-canvas .global-nav .menu-controls .menu-back {
+    float: right;
+    background-color: #505050;
+    background-image: -webkit-linear-gradient(left, #999999, #505050);
+    background-image: linear-gradient(to right, #999999, #505050);
+    background-repeat: repeat-x;
+    border-radius: 5px;
+    background-clip: padding-box;
+    color: #fff;
+    margin: 10px;
+    padding: 7px 7px 7px 1px;
+    visibility: hidden; }
   /* line 108, ../scss/off-canvas.scss */
-  .off-canvas.active-sub-menu .global-nav .menu-controls .menu-back { visibility: visible; }
+  .off-canvas.active-sub-menu .global-nav .menu-controls .menu-back {
+    visibility: visible; }
   /* line 112, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .active-menu { left: 0; z-index: 1; }
+  .off-canvas .global-nav .active-menu {
+    left: 0;
+    z-index: 1; }
   /* line 117, ../scss/off-canvas.scss */
-  .off-canvas .page { position: relative; height: auto; min-height: 100%; top: 0; width: 100%; }
+  .off-canvas .page {
+    position: relative;
+    height: auto;
+    min-height: 100%;
+    top: 0;
+    width: 100%; }
   /* line 129, ../scss/off-canvas.scss */
-  .off-canvas .gov-pull-down, .off-canvas .gov-pull-down-container, .off-canvas .gov-bar, .off-canvas .site-bar, .off-canvas .page { -webkit-transition: top 0.2s ease, left 0.2s ease, height 0.2s ease; transition: top 0.2s ease, left 0.2s ease, height 0.2s ease; }
+  .off-canvas .gov-pull-down,
+  .off-canvas .gov-pull-down-container,
+  .off-canvas .gov-bar,
+  .off-canvas .site-bar,
+  .off-canvas .page {
+    -webkit-transition: top 0.2s ease, left 0.2s ease, height 0.2s ease;
+    transition: top 0.2s ease, left 0.2s ease, height 0.2s ease; }
   /* line 134, ../scss/off-canvas.scss */
-  .off-canvas.active-gov-bar .gov-pull-down-container, .off-canvas.active-gov-bar .site-bar { top: 88px; }
+  .off-canvas.active-gov-bar .gov-pull-down-container, .off-canvas.active-gov-bar .site-bar {
+    top: 88px; }
   /* line 142, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .gov-pull-down, .off-canvas.active-site-menu .gov-pull-down-container, .off-canvas.active-site-menu .gov-bar, .off-canvas.active-site-menu .site-bar, .off-canvas.active-site-menu .page { position: fixed; left: -82%; }
+  .off-canvas.active-site-menu .gov-pull-down, .off-canvas.active-site-menu .gov-pull-down-container, .off-canvas.active-site-menu .gov-bar, .off-canvas.active-site-menu .site-bar, .off-canvas.active-site-menu .page {
+    position: fixed;
+    left: -82%; }
   /* line 147, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .global-nav .icon-right-open:before { padding-top: 3px; position: absolute; right: 5%; }
+  .off-canvas.active-site-menu .global-nav .icon-right-open:before {
+    padding-top: 3px;
+    position: absolute;
+    right: 5%; }
   /* line 153, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .mobile-menu-button { box-shadow: inset 6px 0px 8px -2px #000; }
+  .off-canvas.active-site-menu .mobile-menu-button {
+    box-shadow: inset 6px 0px 8px -2px #000; }
   /* line 157, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .page { box-shadow: 5px 49px 8px #000; }
+  .off-canvas.active-site-menu .page {
+    box-shadow: 5px 49px 8px #000; }
   /* line 161, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .footer { left: -82%; } }
-@media only screen and (min-width: 48em) { /* line 170, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .global-nav .icon-right-open:before { position: relative; right: auto; }
+  .off-canvas.active-site-menu .footer {
+    left: -82%; } }
+@media only screen and (min-width: 48em) {
+  /* line 170, ../scss/off-canvas.scss */
+  .off-canvas.active-site-menu .global-nav .icon-right-open:before {
+    position: relative;
+    right: auto; }
   /* line 175, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .page { box-shadow: none; }
+  .off-canvas.active-site-menu .page {
+    box-shadow: none; }
   /* line 179, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .footer { left: auto; } }
-@media only screen and (min-width: 60em) { /* line 188, ../scss/off-canvas.scss */
-  .global-nav .nav-container { border-radius: 4px; background-clip: padding-box; } }
+  .off-canvas.active-site-menu .footer {
+    left: auto; } }
+@media only screen and (min-width: 60em) {
+  /* line 188, ../scss/off-canvas.scss */
+  .global-nav .nav-container {
+    border-radius: 4px;
+    background-clip: padding-box; } }
 /* Medium Displays: 768px - 1279px */
-@media only screen and (min-width: 48em) { /* line 196, ../scss/off-canvas.scss */
-  body.off-canvas { padding-top: 0; }
+@media only screen and (min-width: 48em) {
+  /* line 196, ../scss/off-canvas.scss */
+  body.off-canvas {
+    padding-top: 0; }
+
   /* line 204, ../scss/off-canvas.scss */
-  .off-canvas .gov-bar, .off-canvas .site-bar, .off-canvas .global-nav, .off-canvas .page { position: relative; }
+  .off-canvas .gov-bar,
+  .off-canvas .site-bar,
+  .off-canvas .global-nav,
+  .off-canvas .page {
+    position: relative; }
   /* line 211, ../scss/off-canvas.scss */
-  .off-canvas.active-site-menu .gov-bar, .off-canvas.active-site-menu .site-bar, .off-canvas.active-site-menu .global-nav, .off-canvas.active-site-menu .page { left: auto; position: relative; }
+  .off-canvas.active-site-menu .gov-bar, .off-canvas.active-site-menu .site-bar, .off-canvas.active-site-menu .global-nav, .off-canvas.active-site-menu .page {
+    left: auto;
+    position: relative; }
   /* line 216, ../scss/off-canvas.scss */
-  .off-canvas.active-gov-bar .site-bar { top: 0; }
+  .off-canvas.active-gov-bar .site-bar {
+    top: 0; }
   /* line 220, ../scss/off-canvas.scss */
-  .off-canvas .global-nav { height: 46px; overflow: visible; z-index: 30; }
+  .off-canvas .global-nav {
+    height: 46px;
+    overflow: visible;
+    z-index: 30; }
   /* line 226, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul li { padding-left: 0; }
+  .off-canvas .global-nav ul li {
+    padding-left: 0; }
   /* line 230, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .menu-controls { display: none; }
+  .off-canvas .global-nav .menu-controls {
+    display: none; }
   /* line 235, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .nav-container, .off-canvas.active-site-menu .global-nav .nav-container { overflow: hidden; }
+  .off-canvas .global-nav .nav-container, .off-canvas.active-site-menu .global-nav .nav-container {
+    overflow: hidden; }
   /* line 240, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .nav-container > ul, .off-canvas.active-site-menu .global-nav .nav-container ul { min-height: auto; }
+  .off-canvas .global-nav .nav-container > ul, .off-canvas.active-site-menu .global-nav .nav-container ul {
+    min-height: auto; }
   /* line 245, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul, .off-canvas.active-site-menu .global-nav ul { margin-left: 0; }
+  .off-canvas .global-nav ul, .off-canvas.active-site-menu .global-nav ul {
+    margin-left: 0; }
   /* line 249, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul { position: absolute; top: 50px !important; left: 0; background: #454545 !important; /* M */ border-radius: 4px !important; /* Do not use mixin here */ background-clip: padding-box !important; overflow: hidden; visibility: hidden; -webkit-transition: left 0s ease; transition: left 0s ease; }
+  .off-canvas .global-nav ul ul {
+    position: absolute;
+    top: 50px !important;
+    left: 0;
+    background: #454545 !important;
+    /* M */
+    border-radius: 4px !important;
+    /* Do not use mixin here */
+    background-clip: padding-box !important;
+    overflow: hidden;
+    visibility: hidden;
+    -webkit-transition: left 0s ease;
+    transition: left 0s ease; }
   /* line 261, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul li { border-right: 1px solid #000; border-left: 1px solid #666; }
+  .off-canvas .global-nav ul ul li {
+    border-right: 1px solid #000;
+    border-left: 1px solid #666; }
   /* line 266, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul li:first { border-left: none; }
+  .off-canvas .global-nav ul ul li:first {
+    border-left: none; }
   /* line 270, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul.active-menu { visibility: visible; }
+  .off-canvas .global-nav ul ul.active-menu {
+    visibility: visible; }
   /* line 274, ../scss/off-canvas.scss */
-  .off-canvas .global-nav ul ul.active-menu li { padding: 0 !important; }
+  .off-canvas .global-nav ul ul.active-menu li {
+    padding: 0 !important; }
   /* line 278, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .active-menu li { padding-left: 0; border-bottom: 0; }
+  .off-canvas .global-nav .active-menu li {
+    padding-left: 0;
+    border-bottom: 0; }
   /* line 283, ../scss/off-canvas.scss */
-  .off-canvas .global-nav .active-menu li a { border-radius: 4px; background: #454545 !important; }
+  .off-canvas .global-nav .active-menu li a {
+    border-radius: 4px;
+    background: #454545 !important; }
   /* line 288, ../scss/off-canvas.scss */
-  .off-canvas .page { min-height: auto; top: -23px; left: 0; } }
+  .off-canvas .page {
+    min-height: auto;
+    top: -23px;
+    left: 0; } }
