Changed Sass comment so it won't appear in compiled CSS

--- a/scss/excelsior/_mixins.scss
+++ b/scss/excelsior/_mixins.scss
@@ -26,7 +26,7 @@
           transition: $transition;
 }
 
-/* Ugh, is there a better way to handle these next two? */
+// Ugh, is there a better way to handle these next two?
 @mixin transition-two($transition1, $transition2) {
   -webkit-transition: $transition1, $transition2;
           transition: $transition1, $transition2;
